--- a/src/AutoFixture.Community.Customizations/AutoFixture.Community.Customizations.csproj
+++ b/src/AutoFixture.Community.Customizations/AutoFixture.Community.Customizations.csproj
@@ -5,18 +5,18 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <Version>1.0.0</Version>
-        <Title>AutoFixture.Customizations</Title>
+        <Title>AutoFixture.Community.Customizations</Title>
         <Authors>Owen Krueger</Authors>
-        <RootNamespace>AutoFixture.Customizations</RootNamespace>
+        <RootNamespace>AutoFixture.Community.Customizations</RootNamespace>
         <Description>Useful AutoFixture Customizations</Description>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageProjectUrl>https://github.com/Owen-Krueger/AutoFixture.Customizations</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/Owen-Krueger/AutoFixture.Community.Customizations</PackageProjectUrl>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageTags>AutoFixture;DateOnly;TimeOnly</PackageTags>
-        <RepositoryUrl>https://github.com/Owen-Krueger/AutoFixture.Customizations</RepositoryUrl>
+        <RepositoryUrl>https://github.com/Owen-Krueger/AutoFixture.Community.Customizations</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
-        <PackageReleaseNotes>https://github.com/Owen-Krueger/AutoFixture.Customizations/releases/tag/v1.0.0</PackageReleaseNotes>
+        <PackageReleaseNotes>https://github.com/Owen-Krueger/AutoFixture.Community.Customizations/releases/tag/v1.0.0</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
