--- a/tests/AutoFixture.Community.Customizations.Tests/AutoFixture.Community.Customizations.Tests.csproj
+++ b/tests/AutoFixture.Community.Customizations.Tests/AutoFixture.Community.Customizations.Tests.csproj
@@ -7,6 +7,7 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <RootNamespace>AutoFixture.Customizations.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -22,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\AutoFixture.Customizations\AutoFixture.Customizations.csproj" />
+      <ProjectReference Include="..\..\src\AutoFixture.Community.Customizations\AutoFixture.Community.Customizations.csproj" />
     </ItemGroup>
 
 </Project>
