--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -13,7 +13,7 @@ jobs:
 
     env:
       BUILD_CONFIG: 'Release'
-      SOLUTION: 'AutoFixture.Customizations.sln'
+      SOLUTION: 'AutoFixture.Community.Customizations.sln'
 
     runs-on: ubuntu-latest
 
